<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connexus</string>
    <string name="hello_world">Hello world!</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="welcome">Connexus!</string>
    <string name="uploadImage">Upload Image</string>
    <string name="upload_hint">Add a caption for photo</string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="title_activity_display_images">DisplayImages</string>
    <string name="imagePage">View All Images</string>
    <string name="uploadImageActivity"> Upload a new image</string>
    <string name="title_activity_image_upload">ImageUpload</string>

    <string name="streamPage">View All Streams</string>
    <string name="singleStreamPage">View Single Streams</string>
    <string name="singleStreamPageFooter">Footer</string>
    <string name="search_hint">Search...</string>
    <string name="search_button_label">Search...</string>
    <string name="searchResultsPage">Search Results</string>
    <string name="go_home">All Streams</string>
    <string name="author_text">The World\'s Greatest Photo Sharing App (TM).</string>
    <string name="authors">By Abhinav Malhotra and XiangChen!</string>



    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>

    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Status: Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>
    <string name="nearby_button_label">Nearby...</string>
    <string name="subscribed_button_label">My Subscribed Streams</string>
    <string name="camera">Camera</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="mock_server_has_token">Mock server has refresh token?</string>
    <string name="request_server_auth_code">Request server auth code?</string>
    <string name="configuration_error">Error: the value of WEB_CLIENT_ID or SERVER_BASE_URL is not  set correctly. This will cause errors when requesting a server auth code.</string>
    <string name="title_activity_display_streams">DisplayStreams</string>
    <string name="title_activity_view_single_stream">ViewSingleStream</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="title_activity_subscribed_streams">SubscribedStreams</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="seeMoreImages">More pictures</string>
    <string name="getLocation">Get Location</string>

    <!-- From Xiang-->

    <!--<string name="title_activity_camera">CameraActivity</string>-->
    <!--<string name="app_name">CameraActivity</string>-->
    <string name="title">Connexus!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera_preview">CameraPreview</string>
    <string name="capture">Take a Picture</string>
    <string name="useit">Use this picture</string>
    <string name="title_activity_view_nearby_streams">ViewNearbyStreams</string>
    <string name="more">More</string>
    <string name="nearby_pictures">Nearby Pictures</string>
    <string name="view_streams">View All Streams</string>
    <string name="title_activity_image_adapter">ImageAdapter</string>
    <string name="title_activity_search">Search</string>
    <string name="search">Search</string>



    // Location Services
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="title_activity_get_location">GetLocation</string>



</resources>
