<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Homepage"
        android:layout_centerHorizontal="true" >

        <TextView
            android:text="@string/welcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:paddingBottom = "40sp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dip"
                android:enabled="false" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:padding="3dip">


            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_button_name"
                android:enabled="false"
                 />

            <Button
                android:id="@+id/revoke_access_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revoke_access_button_name"
                android:enabled="false"
                />
        </LinearLayout>






        <!--<Button-->
            <!--android:id="@+id/view_all_images"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/imagePage"-->
            <!--android:onClick="viewAllImages"-->
            <!--/>-->

        <Button
            android:id="@+id/view_all_streams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/streamPage"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:onClick="viewAllStreams"
            />
        <TextView
            android:id="@+id/author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dip"
            android:layout_gravity="center"
            android:text="@string/author_text" />
        <TextView
            android:id="@+id/author_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dip"
            android:layout_gravity="center"
            android:text="@string/authors" />

    <TextView
        android:id="@+id/sign_in_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_gravity="center"
        android:text="@string/status_signed_out" />
        <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/uploadImageActivity"-->
            <!--android:clickable="false"-->
            <!--android:id="@+id/open_image_upload_page"/>-->
</LinearLayout>
