<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aptdemo.yzhao.androiddemo.DisplayStreams">

    <TextView
        android:text="@string/streamPage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        android:paddingBottom = "40sp"
        />

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridviewStreams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="4"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <EditText
        android:id="@+id/search_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint" />

    <Button
        android:id="@+id/nearby_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nearby_button_label"
        android:onClick="viewNearbyStreams"
         />
    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_label"
        android:onClick="searchStreams"
        />




        <!--<Button-->
            <!--android:id="@+id/sign_out_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/sign_out_button_name"-->
            <!--android:enabled="false"-->
            <!--/>-->

        <!--<Button-->
            <!--android:id="@+id/revoke_access_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/revoke_access_button_name"-->
            <!--android:enabled="false"-->
            <!--/>-->
        <Button
            android:id="@+id/subscribed_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribed_button_label"
            android:onClick="subscribedStreams"
            android:visibility="invisible"
            />


</LinearLayout>
