<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aptdemo.yzhao.androiddemo.ViewSingleStream">

    <TextView
        android:id="@+id/viewSingleStream"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="10sp"
        android:paddingBottom = "0sp"
        />

    <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:id="@+id/response_scroll_singleStream"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:scrollbars="vertical"-->
        <!-->-->

    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridviewSingleStream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnWidth="80dp"
        android:numColumns="4"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        />
    <!--</ScrollView>-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seeMoreImages"
        android:id="@+id/see_more_images"
        android:onClick="SeeMoreImages"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uploadImageActivity"
        android:id="@+id/open_image_upload_page"/>


    <Button
        android:id="@+id/all_streams_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_home"
        android:layout_centerInParent="true"
        android:onClick="GoHome"
        />
</LinearLayout>
