<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--tools:context="com.aptdemo.yzhao.androiddemo.CameraActivity">-->

<!--</RelativeLayout>-->
<!--<?xml version="1.0" encoding="utf-8"?>-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:paddingLeft="16dp"
android:paddingRight="16dp"
android:paddingTop="16dp"
android:paddingBottom="16dp"
    >
<TextView
    android:id="@+id/titletext"
    android:text="@string/title"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="32sp"
    android:textColor="@color/colorRed"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    />

<FrameLayout
    android:id="@+id/camera_preview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/button_capture"
        android:text="@string/capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:drawableTop="@drawable/camera64"
        android:layout_marginLeft="32dp"
        />

    <Button
        android:id="@+id/use_this"
        android:text="@string/useit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:onClick="useThisPhoto"
        android:textAllCaps="false"
        android:drawableTop="@drawable/like32"
        android:layout_marginLeft="10dp"

        />

</LinearLayout>

<Button
    android:id="@+id/view_all_streams"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="Streams"
    android:onClick="GoHome"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:textAllCaps="false"
    />
</LinearLayout>

